tests/workflow/negative/terminal_self_loop.dot
digraph workflow {
edge [color="#000000"]
graph [bgcolor=transparent]


terminal [shape=point; width=0.3; peripheries=2; style=filled; color="#d11010"; label=""]

1[label=<<FONT POINT-SIZE="16">go</FONT><FONT POINT-SIZE="10" COLOR="blue"> </FONT>>shape=box; fontname="Arial"; style=filled; color=black; fillcolor=gray75;]

terminal -> 1 ; 1 -> terminal



}
